[gd_scene load_steps=41 format=3 uid="uid://bsmude3h8vk6i"]

[ext_resource type="Script" path="res://system/actor/body.gd" id="1_66flj"]
[ext_resource type="Script" path="res://system/smooth_move/smooth_move.gd" id="2_2pq0h"]
[ext_resource type="Script" path="res://player/Model_Player.gd" id="3_tnw6v"]
[ext_resource type="PackedScene" uid="uid://besxjh8nxywkx" path="res://model/eiden/eiden_v4.tscn" id="4_j7ri1"]
[ext_resource type="PackedScene" uid="uid://cg4dv43trrup4" path="res://player/sensors.tscn" id="5_es4sx"]
[ext_resource type="Script" path="res://system/bpbfsm/bpbfsm_3d.gd" id="6_r5fkm"]
[ext_resource type="Script" path="res://player/fsm_states/HANGING_ROTATE_RIGHT.gd" id="29_sr3hv"]
[ext_resource type="Script" path="res://player/fsm_states/HANGING_ROTATE_LEFT.gd" id="30_2evw8"]
[ext_resource type="Script" path="res://player/fsm_states/ROLL.gd" id="30_cmurc"]
[ext_resource type="Script" path="res://player/fsm_states/HANGING_ENTER.gd" id="33_j0hlw"]
[ext_resource type="Script" path="res://player/fsm_states/HANGING.gd" id="34_33dwm"]
[ext_resource type="Script" path="res://player/fsm_states/HANGING_MLEFT.gd" id="35_30jey"]
[ext_resource type="Script" path="res://player/fsm_states/HANGING_MRIGHT.gd" id="36_dxyd5"]
[ext_resource type="Script" path="res://player/fsm_states/HANGING_CLIMB_UP.gd" id="37_swf23"]
[ext_resource type="Script" path="res://player/fsm_states/WALLRUN.gd" id="38_k1cd5"]
[ext_resource type="Script" path="res://player/fsm_states/WALLRUN_UP.gd" id="39_wuawg"]
[ext_resource type="Script" path="res://player/fsm_states/WALLRUN_RIGHT.gd" id="40_280eo"]
[ext_resource type="Script" path="res://player/fsm_states/WALLRUN_LEFT.gd" id="41_0gojp"]
[ext_resource type="Script" path="res://player/fsm_states/HURT.gd" id="42_4kypp"]
[ext_resource type="PackedScene" uid="uid://bhe4jmd0jkeqi" path="res://system/bpbfsm/BASE_STATES/main_menu.tscn" id="42_85alb"]
[ext_resource type="Script" path="res://player/fsm_states/RAGDOLL.gd" id="43_fdv66"]
[ext_resource type="Script" path="res://player/fsm_states/COMBAT.gd" id="44_2s2d5"]
[ext_resource type="PackedScene" uid="uid://ddbkvp4rvsjje" path="res://system/bpbfsm/BASE_STATES/system_menu.tscn" id="44_vnpi8"]
[ext_resource type="Script" path="res://player/fsm_states/ATTACK.gd" id="45_ug1pl"]
[ext_resource type="PackedScene" uid="uid://c4yu630b1fk4p" path="res://system/bpbfsm/BASE_STATES/gameplay_menu.tscn" id="46_3pd7m"]
[ext_resource type="Script" path="res://player/fsm_states/FALL.gd" id="46_4bll1"]
[ext_resource type="PackedScene" uid="uid://hxt25njq22y5" path="res://system/bpbfsm/BASE_STATES/event.tscn" id="48_ahs63"]
[ext_resource type="PackedScene" uid="uid://khwqv087wmf6" path="res://system/bpbfsm/BASE_STATES/dialog.tscn" id="50_80ju5"]
[ext_resource type="Script" path="res://player/fsm_states/JUMP_2ND.gd" id="52_72hgt"]
[ext_resource type="PackedScene" uid="uid://cqxldf8npmar2" path="res://system/bpbfsm/BASE_STATES/gameplay.tscn" id="52_684rg"]
[ext_resource type="Script" path="res://player/fsm_states/WALLJUMP.gd" id="53_2rhtn"]
[ext_resource type="Script" path="res://player/fsm_states/AIRBORNE_FWD.gd" id="54_4ku8l"]
[ext_resource type="Script" path="res://player/fsm_states/PLAYER_CONTROL.gd" id="54_bvfid"]
[ext_resource type="Script" path="res://player/fsm_states/GROUNDED.gd" id="55_bucsd"]
[ext_resource type="Script" path="res://player/fsm_states/WALL_LANDED.gd" id="55_s07mk"]
[ext_resource type="Script" path="res://player/fsm_states/AIRBORNE.gd" id="56_jgcec"]
[ext_resource type="Script" path="res://player/fsm_states/GET_UP.gd" id="56_m4p6k"]
[ext_resource type="Script" path="res://player/fsm_states/JUMP.gd" id="57_i85qg"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_72vle"]
radius = 0.4
height = 1.6

[sub_resource type="SeparationRayShape3D" id="SeparationRayShape3D_0g22u"]
length = 0.9

[node name="Player" type="CharacterBody3D"]
collision_layer = 2
collision_mask = 5
script = ExtResource("1_66flj")
use_custom_gravity = true

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
height = 2.0

[node name="col-body" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1, 0)
shape = SubResource("CapsuleShape3D_72vle")

[node name="col-leg0" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0.2, 0, -0.2)
shape = SubResource("SeparationRayShape3D_0g22u")

[node name="col-leg1" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0.2, 0, 0.2)
shape = SubResource("SeparationRayShape3D_0g22u")

[node name="col-leg2" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, -0.2, 0, 0.2)
shape = SubResource("SeparationRayShape3D_0g22u")

[node name="col-leg3" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, -0.2, 0, -0.2)
shape = SubResource("SeparationRayShape3D_0g22u")

[node name="Smooth_Move" type="Node3D" parent="."]
script = ExtResource("2_2pq0h")

[node name="Model_Player" type="Node3D" parent="Smooth_Move"]
script = ExtResource("3_tnw6v")

[node name="Sensors" parent="Smooth_Move/Model_Player" instance=ExtResource("5_es4sx")]
state_machine_path = NodePath("../../../BPBFMS_MAIN")

[node name="eiden" parent="Smooth_Move/Model_Player" instance=ExtResource("4_j7ri1")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.9, 0)

[node name="BPBFMS_MAIN" type="Node" parent="."]
script = ExtResource("6_r5fkm")
main_path = NodePath("..")
body_path = NodePath("..")
model_path = NodePath("../Smooth_Move/Model_Player")
state_init = "GAMEPLAY"

[node name="MAIN_MENU" parent="BPBFMS_MAIN" instance=ExtResource("42_85alb")]

[node name="SYSTEM_MENU" parent="BPBFMS_MAIN" instance=ExtResource("44_vnpi8")]

[node name="GAMEPLAY_MENU" parent="BPBFMS_MAIN" instance=ExtResource("46_3pd7m")]

[node name="EVENT" parent="BPBFMS_MAIN" instance=ExtResource("48_ahs63")]

[node name="DIALOG" parent="BPBFMS_MAIN" instance=ExtResource("50_80ju5")]

[node name="GAMEPLAY" parent="BPBFMS_MAIN" instance=ExtResource("52_684rg")]
state_init = "PLAYER_CONTROL"

[node name="PLAYER_CONTROL" type="Node" parent="BPBFMS_MAIN/GAMEPLAY"]
script = ExtResource("54_bvfid")
state_init = "GROUNDED"

[node name="GROUNDED" type="Node" parent="BPBFMS_MAIN/GAMEPLAY/PLAYER_CONTROL"]
script = ExtResource("55_bucsd")

[node name="AIRBORNE" type="Node" parent="BPBFMS_MAIN/GAMEPLAY/PLAYER_CONTROL"]
script = ExtResource("56_jgcec")

[node name="JUMP" type="Node" parent="BPBFMS_MAIN/GAMEPLAY/PLAYER_CONTROL"]
script = ExtResource("57_i85qg")

[node name="JUMP_2ND" type="Node" parent="BPBFMS_MAIN/GAMEPLAY/PLAYER_CONTROL"]
script = ExtResource("52_72hgt")

[node name="WALLJUMP" type="Node" parent="BPBFMS_MAIN/GAMEPLAY/PLAYER_CONTROL"]
script = ExtResource("53_2rhtn")

[node name="AIRBORNE_FWD" type="Node" parent="BPBFMS_MAIN/GAMEPLAY/PLAYER_CONTROL"]
script = ExtResource("54_4ku8l")

[node name="WALL_LANDED" type="Node" parent="BPBFMS_MAIN/GAMEPLAY/PLAYER_CONTROL"]
script = ExtResource("55_s07mk")

[node name="ROLL" type="Node" parent="BPBFMS_MAIN/GAMEPLAY/PLAYER_CONTROL"]
script = ExtResource("30_cmurc")

[node name="GET_UP" type="Node" parent="BPBFMS_MAIN/GAMEPLAY/PLAYER_CONTROL"]
script = ExtResource("56_m4p6k")

[node name="FALL" type="Node" parent="BPBFMS_MAIN/GAMEPLAY/PLAYER_CONTROL"]
script = ExtResource("46_4bll1")

[node name="HANGING_ON_LEDGE" type="Node" parent="BPBFMS_MAIN/GAMEPLAY/PLAYER_CONTROL"]
script = ExtResource("33_j0hlw")

[node name="HANGING" type="Node" parent="BPBFMS_MAIN/GAMEPLAY/PLAYER_CONTROL/HANGING_ON_LEDGE"]
script = ExtResource("34_33dwm")

[node name="HANGING_MLEFT" type="Node" parent="BPBFMS_MAIN/GAMEPLAY/PLAYER_CONTROL/HANGING_ON_LEDGE"]
script = ExtResource("35_30jey")

[node name="HANGING_MRIGHT" type="Node" parent="BPBFMS_MAIN/GAMEPLAY/PLAYER_CONTROL/HANGING_ON_LEDGE"]
script = ExtResource("36_dxyd5")

[node name="HANGING_CLIMB_UP" type="Node" parent="BPBFMS_MAIN/GAMEPLAY/PLAYER_CONTROL/HANGING_ON_LEDGE"]
script = ExtResource("37_swf23")

[node name="HANGING_ROTATE_RIGHT" type="Node" parent="BPBFMS_MAIN/GAMEPLAY/PLAYER_CONTROL/HANGING_ON_LEDGE"]
script = ExtResource("29_sr3hv")

[node name="HANGING_ROTATE_LEFT" type="Node" parent="BPBFMS_MAIN/GAMEPLAY/PLAYER_CONTROL/HANGING_ON_LEDGE"]
script = ExtResource("30_2evw8")

[node name="WALLRUN" type="Node" parent="BPBFMS_MAIN/GAMEPLAY/PLAYER_CONTROL"]
script = ExtResource("38_k1cd5")

[node name="WALLRUN_UP" type="Node" parent="BPBFMS_MAIN/GAMEPLAY/PLAYER_CONTROL/WALLRUN"]
script = ExtResource("39_wuawg")

[node name="WALLRUN_RIGHT" type="Node" parent="BPBFMS_MAIN/GAMEPLAY/PLAYER_CONTROL/WALLRUN"]
script = ExtResource("40_280eo")

[node name="WALLRUN_LEFT" type="Node" parent="BPBFMS_MAIN/GAMEPLAY/PLAYER_CONTROL/WALLRUN"]
script = ExtResource("41_0gojp")

[node name="HURT" type="Node" parent="BPBFMS_MAIN/GAMEPLAY"]
script = ExtResource("42_4kypp")

[node name="RAGDOLL" type="Node" parent="BPBFMS_MAIN/GAMEPLAY/HURT"]
script = ExtResource("43_fdv66")

[node name="COMBAT" type="Node" parent="BPBFMS_MAIN/GAMEPLAY"]
script = ExtResource("44_2s2d5")

[node name="ATTACK" type="Node" parent="BPBFMS_MAIN/GAMEPLAY/COMBAT"]
script = ExtResource("45_ug1pl")
